--- a/packages/data/pubspec.yaml
+++ b/packages/data/pubspec.yaml
@@ -9,7 +9,11 @@ environment:
 # Add regular dependencies here.
 dependencies:
   faker: ^2.1.0
+  freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+  build_runner: ^2.4.6
