--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,62 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+
+  flutter_localization:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
+
+
+   #For api calls
+  retrofit: ^4.0.3
+
+  #For immutability and exhaustive pattern matching
+  freezed_annotation: ^2.4.1
+
+  #State management
+  flutter_bloc: ^8.1.3
+
+  #To compare objects
+  equatable: ^2.0.5
+
+  #service location
+  get_it: ^7.6.4
+
+  #For Skeleton
+  skeletonizer: ^0.8.0
+  data:
+    path: packages/data
+
+  http: ^1.1.0
+
+  cached_network_image: ^3.3.0
+
+
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.6
+  retrofit_generator: ^8.0.2
+  freezed: ^2.4.5
+
+
 
 flutter:
+  assets:
+    - assets/
+    - assets/images/
+
+
+
   uses-material-design: true
+
+
+
+  generate: true
+flutter_intl:
+  main_locale: en
+  enabled: true
